# prop-bench

./: .env.example  .gitignore  ARCHITECTURE.md  CITATION.cff  COMMANDS.md  Cargo.toml  DOCUMENTATION.md  LICENSE  README.md  config.ts  db.ts  generation_algorithm.md  harness.ts  migrate.ts  package-lock.json  package.json  parser.ts  prompt.ts  rules.md  scorer.ts  tier-presets.json  tsconfig.json
.claude/commands/: interview.md  update-docs.md
crates/logic-proof-trainer-lib/: Cargo.toml
crates/logic-proof-trainer-lib/src/models/: formula.rs  mod.rs  proof.rs  scope.rs  statistics.rs  theorem.rs
crates/logic-proof-trainer-lib/src/models/rules/: equivalence.rs  inference.rs  mod.rs  technique.rs
crates/logic-proof-trainer-lib/src/services/: dependency.rs  fragments.rs  generator.rs  mod.rs  obfuscate_gen.rs  proof_search.rs  proof_tree.rs  truth_table.rs  verifier.rs
crates/logic-proof-trainer-lib/src/services/tree_gen/: backward.rs  builder.rs  context.rs  mod.rs  templates.rs
gui/: index.html  package-lock.json  package.json  vite.config.ts
gui/server/: cli.ts  index.ts  tsconfig.json
gui/server/routes/: benchmark.ts  generate.ts  results.ts  theoremSets.ts  tierPresets.ts  validate.ts
gui/src/: App.tsx  types.ts
gui/src/api/: client.ts
gui/src/components/: AvgLinesByDifficultyTable.tsx  DifficultyBreakdown.tsx  EloChart.tsx  FailureChart.tsx  GenerateTheorems.tsx  HardestTheorems.tsx  HeadToHeadMatrix.tsx  LatencyTable.tsx  (+12 more)
models/: gemini.ts  index.ts  openrouter.ts
prover/: proof-method.md  proof.json  prover.js  theorem.json
src/: main.rs
(+9 files in other folders)
