[package]
name = "propbench"
version = "0.1.0"
edition = "2021"
description = "CLI tool for PropBench — LLM benchmark for propositional logic proofs"

[[bin]]
name = "propbench"
path = "src/main.rs"

[dependencies]
logic-proof-trainer = { path = "crates/logic-proof-trainer-lib" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
