[package]
name = "logic-proof-trainer"
version = "0.1.0"
description = "A Logic Proof Trainer using natural deduction (vendored library)"
edition = "2021"

[lib]
name = "logic_proof_trainer_lib"
crate-type = ["lib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
